# agent-kernel

./: .gitignore  CLAUDE.md  Cargo.toml  README.md
.claude/skills/code-quality/: SKILL.md
crates/agent-kernel/: Cargo.toml
crates/agent-kernel/src/: main.rs  provider.rs  tui.rs
crates/agent-kernel/src/prompt/: sections.rs
crates/agent-kernel/src/tui/: conversation.rs  input.rs  mod.rs  status_bar.rs  theme.rs  types.rs
crates/agent-kernel/src/tui/blocks/: assistant.rs  info.rs  mod.rs  permission.rs  tool_call.rs  user.rs
crates/dist-code-agent/: Cargo.toml
crates/dist-code-agent/src/: frontend.rs  main.rs  provider.rs  tools.rs  tui.rs
crates/dist-code-agent/src/prompt/: mod.rs  sections.rs
crates/dist-code-agent/tests/: tools_test.rs
crates/kernel-core/: Cargo.toml
crates/kernel-core/src/: context.rs  context_store.rs  event_loop.rs  in_process.rs  lib.rs  mcp_stdio.rs  permission.rs  proxy_frontend.rs  proxy_tool.rs  session.rs  session_events.rs  testutil.rs  toolset_pool.rs  turn_loop.rs
crates/kernel-core/tests/: end_to_end.rs
crates/kernel-daemon/: Cargo.toml
crates/kernel-daemon/src/: main.rs  manifest.rs  provider.rs  router.rs  toolset_pool.rs
crates/kernel-interfaces/: Cargo.toml
crates/kernel-interfaces/src/: channel.rs  framing.rs  frontend.rs  lib.rs  manifest.rs  policy.rs  protocol.rs  provider.rs  tool.rs  (+3 more)
crates/kernel-providers/: Cargo.toml
crates/kernel-workspace-local/: Cargo.toml
crates/kernel-workspace-local/src/: lib.rs  main.rs
crates/kernel-workspace-local/tests/: mcp_stdio_binary.rs
distros/: code-agent.toml
docs/: AGENT_KERNEL.md  agent-kernel-project-context.md  agent-kernel-v01-spec.md  architecture.md  design-proposals.md  distribution-concepts.md  roadmap.md  spec-protocol.md  tui-roadmap.md
docs/changes/: 001-design-evolution.md
policies/: lockdown.yaml  permissive.yaml
specs/: 0001-slash-commands.md  0002-permission-always-allow.md  0003-conversation-log.md  0004-projection-compaction.md  0005-session-hydration.md  0006-sink-storage-location.md  0007-remote-sink.md  0008-workspace-fingerprint.md  0009-agent-ergonomics.md  0009-promote-session-event-sink.md  0010-kernel-providers-crate.md  0011-distribution-manifest.md  0012-policy-via-manifest.md  0013-tools-via-manifest.md  0014-frontend-via-manifest.md  0015-toolset-trait-and-execution-ctx.md  0016-mcp-stdio-transport.md  0017-collapse-daemon-into-single-binary.md  0018-tui-module-split.md  0019-model-output-streaming.md  0020-clean-tool-results.md  0021-system-prompt-improvements.md  0022-error-recovery.md  _template.md
(+3 files in other folders)
