[package]
name = "dist-code-agent"
version.workspace = true
edition.workspace = true

[[bin]]
name = "agent-kernel"
path = "src/main.rs"

[dependencies]
kernel-interfaces = { path = "../kernel-interfaces" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
ratatui = "0.29"
crossterm = "0.28"
pulldown-cmark = "0.13"
unicode-width = "0.1"

[dev-dependencies]
kernel-core = { path = "../kernel-core" }
tempfile = "3"