[package]
name = "kernel-daemon"
version.workspace = true
edition.workspace = true

[[bin]]
name = "agent-kernel-daemon"
path = "src/main.rs"

[dependencies]
kernel-interfaces = { path = "../kernel-interfaces" }
kernel-core = { path = "../kernel-core" }
kernel-providers = { path = "../kernel-providers" }
crossbeam-channel = "0.5"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
toml = "0.8"

[dev-dependencies]
tempfile = "3"
