[package]
name = "kernel-workspace-local"
version.workspace = true
edition.workspace = true

[[bin]]
name = "kernel-workspace-local"
path = "src/main.rs"

[dependencies]
kernel-interfaces = { path = "../kernel-interfaces" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"

[dev-dependencies]
tempfile = "3"
